<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android" android:key="org.istic.android.BubbleChamberprefs">
    <ListPreference android:entries="@array/palettenames" android:summary="@string/palettepref_summary" android:entryValues="@array/palettevalues" android:title="@string/palettepref_title" android:key="palette"></ListPreference>
    <com.hlidskialf.android.preference.SeekBarPreference android:title="@string/num_particlespref_title" android:summary="@string/num_particlespref_summary" android:defaultValue="20" android:max="100" android:key="num_particles" android:text="%"></com.hlidskialf.android.preference.SeekBarPreference>
    <com.hlidskialf.android.preference.SeekBarPreference android:title="@string/frameratepref_title" android:summary="@string/frameratepref_summary" android:defaultValue="500" android:max="1000" android:key="framerate" android:text="ms/frame"></com.hlidskialf.android.preference.SeekBarPreference>
    <CheckBoxPreference android:title="@string/resetpref_title" android:summaryOn="@string/resetpref_summaryOn" android:summaryOff="@string/resetpref_summaryOff" android:key="reset"></CheckBoxPreference>
    <com.shadowburst.TimeIntervalPreference
    	android:title="@string/reset_timepref_title"
    	android:summary="@string/reset_timepref_summary"
    	android:key="reset_time"
    	android:dependency="reset"
    	android:defaultValue="30 minutes">
    </com.shadowburst.TimeIntervalPreference>
    <PreferenceCategory android:title="@string/about_title">
    </PreferenceCategory>
    <PreferenceScreen android:title="@string/feedback_title" android:summary="@string/feedback_summary">
    	<intent android:action="android.intent.action.VIEW" android:data="mailto:support@shadowburst.com?subject=Bubble Chamber feedback">
    	</intent>
    </PreferenceScreen>
</PreferenceScreen>
